added doxygen comments

--- a/pythonApps/Presentation.ipynb
+++ b/pythonApps/Presentation.ipynb
@@ -379,7 +379,7 @@
     "\n",
     "# hyperParameters = dl.HyperParameters(epochs,batchSize,learningRate)\n",
     "#trainingEvaluation = network.trainAndValidate(data,learningParameters,1)\n",
-    "#network.writeVariables(projectDir+\"WeightDeposit/\",nameNewNetwork)"
+    "#network.writeParameters(projectDir+\"WeightDeposit/\",nameNewNetwork)"
    ]
   },
   {
